--- a/board/nextthing/chip/linux-minimal.config
+++ b/board/nextthing/chip/linux-minimal.config
@@ -1241,22 +1241,20 @@ CONFIG_ARCH_REQUIRE_GPIOLIB=y
 CONFIG_GPIOLIB=y
 CONFIG_GPIO_DEVRES=y
 CONFIG_OF_GPIO=y
-CONFIG_GPIOLIB_IRQCHIP=y
 # CONFIG_DEBUG_GPIO is not set
 CONFIG_GPIO_SYSFS=y
-CONFIG_GPIO_GENERIC=y
 
 #
 # Memory mapped GPIO drivers
 #
 # CONFIG_GPIO_74XX_MMIO is not set
 # CONFIG_GPIO_ALTERA is not set
-# CONFIG_GPIO_AXP209 is not set
-CONFIG_GPIO_DWAPB=y
-CONFIG_GPIO_EM=y
-CONFIG_GPIO_GENERIC_PLATFORM=y
+CONFIG_GPIO_AXP209=y
+# CONFIG_GPIO_DWAPB is not set
+# CONFIG_GPIO_EM is not set
+# CONFIG_GPIO_GENERIC_PLATFORM is not set
 # CONFIG_GPIO_GRGPIO is not set
-CONFIG_GPIO_XILINX=y
+# CONFIG_GPIO_XILINX is not set
 # CONFIG_GPIO_ZEVIO is not set
 # CONFIG_GPIO_ZX is not set
 
@@ -1267,9 +1265,8 @@ CONFIG_GPIO_XILINX=y
 # CONFIG_GPIO_ADNP is not set
 # CONFIG_GPIO_MAX7300 is not set
 # CONFIG_GPIO_MAX732X is not set
-CONFIG_GPIO_PCA953X=y
-CONFIG_GPIO_PCA953X_IRQ=y
-CONFIG_GPIO_PCF857X=y
+# CONFIG_GPIO_PCA953X is not set
+# CONFIG_GPIO_PCF857X is not set
 # CONFIG_GPIO_SX150X is not set
 
 #
