--- a/package/Config.in
+++ b/package/Config.in
@@ -1266,6 +1266,7 @@ endif
 	source "package/lrzsz/Config.in"
 	source "package/macchanger/Config.in"
 	source "package/memcached/Config.in"
+	source "package/mender/Config.in"
 	source "package/mii-diag/Config.in"
 	source "package/minidlna/Config.in"
 	source "package/mjpg-streamer/Config.in"
