--- a/board/nextthing/chip/mender.conf
+++ b/board/nextthing/chip/mender.conf
@@ -1,13 +1,10 @@
 {
-  "ClientProtocol": "http",
-  "HttpsClient": {
-    "SkipVerify": true
-  },
   "RootfsPartA": "ubi0:rootfsa",
   "RootfsPartB": "ubi0:rootfsb",
   "UpdatePollIntervalSeconds": 1800,
   "InventoryPollIntervalSeconds": 1800,
   "RetryPollIntervalSeconds": 300,
-  "ServerURL": "deploy.dalakolonin.se",
-  "ServerCertificate": ""
+  "ServerCertificate": "/etc/mender/server.crt",
+  "ServerURL": "https://mender.dalakolonin.se",
+  "TenantToken": "dummy"
 }
