conf: Fix mender.conf

--- a/board/nextthing/chip/overlay/etc/mender/mender.conf
+++ b/board/nextthing/chip/overlay/etc/mender/mender.conf
@@ -2,8 +2,8 @@
   "InventoryPollIntervalSeconds": 1800,
   "UpdatePollIntervalSeconds": 1800,
   "RetryPollIntervalSeconds": 300,
-  "RootfsPartA": "ubi0:rootfsa",
-  "RootfsPartB": "ubi0:rootfsb",
+  "RootfsPartA": "ubi0_0",
+  "RootfsPartB": "ubi0_1",
   "ServerCertificate": "/etc/mender/server.crt",
   "ServerURL": "https://mender.dalakolonin.se",
   "TenantToken": "dummy"
