chip: Save defconfig

--- a/configs/chip_defconfig
+++ b/configs/chip_defconfig
@@ -13,32 +13,43 @@ BR2_TARGET_OPTIMIZATION="-pipe"
 BR2_TARGET_GENERIC_HOSTNAME="chip"
 BR2_TARGET_GENERIC_ROOT_PASSWD="chip"
 BR2_TARGET_GENERIC_GETTY_BAUDRATE_115200=y
+BR2_TARGET_TZ_INFO=y
+BR2_TARGET_TZ_ZONELIST="etcetera europe"
+BR2_TARGET_LOCALTIME="Europe/Stockholm"
 BR2_ROOTFS_USERS_TABLES="board/nextthing/chip/users_table.txt"
 BR2_ROOTFS_OVERLAY="board/nextthing/chip/overlay"
 BR2_ROOTFS_POST_BUILD_SCRIPT="board/nextthing/chip/post-build.sh"
+BR2_ROOTFS_POST_IMAGE_SCRIPT="board/nextthing/chip/post-image.sh"
 BR2_LINUX_KERNEL=y
 BR2_LINUX_KERNEL_CUSTOM_GIT=y
 BR2_LINUX_KERNEL_CUSTOM_REPO_URL="https://github.com/NextThingCo/CHIP-linux.git"
 BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION="debian/4.4.13-ntc-mlc"
+BR2_LINUX_KERNEL_PATCH="$(TOPDIR)/board/nextthing/chip/patches/linux"
 BR2_LINUX_KERNEL_USE_CUSTOM_CONFIG=y
-BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/nextthing/chip/linux.config"
+BR2_LINUX_KERNEL_CUSTOM_CONFIG_FILE="board/nextthing/chip/linux-minimal.config"
 BR2_LINUX_KERNEL_ZIMAGE=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
 BR2_LINUX_KERNEL_INTREE_DTS_NAME="sun5i-r8-chip"
 BR2_LINUX_KERNEL_INSTALL_TARGET=y
+BR2_PACKAGE_BUSYBOX_CONFIG="board/nextthing/chip/busybox.config"
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
-BR2_PACKAGE_HWTEST=y
 BR2_PACKAGE_ALSA_UTILS=y
 BR2_PACKAGE_ALSA_UTILS_APLAY=y
-BR2_PACKAGE_MPG123=y
-BR2_PACKAGE_SOX=y
+BR2_PACKAGE_SQUEEZELITE=y
+BR2_PACKAGE_STRESS=y
 BR2_PACKAGE_MMC_UTILS=y
 BR2_PACKAGE_MTD=y
 BR2_PACKAGE_MTD_MKFSUBIFS=y
+BR2_PACKAGE_I2C_TOOLS=y
+BR2_PACKAGE_LSHW=y
 BR2_PACKAGE_LSUIO=y
 BR2_PACKAGE_PCIUTILS=y
 BR2_PACKAGE_LIBSNDFILE=y
+BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBUSB=y
+BR2_PACKAGE_JSON_C=y
+BR2_PACKAGE_LIBLOGGING=y
+BR2_PACKAGE_LIBESTR=y
 BR2_PACKAGE_AVAHI=y
 BR2_PACKAGE_AVAHI_DAEMON=y
 BR2_PACKAGE_AVAHI_LIBDNSSD_COMPATIBILITY=y
@@ -52,8 +63,12 @@ BR2_PACKAGE_CONNMAN_WIFI=y
 BR2_PACKAGE_CONNMAN_WISPR=y
 BR2_PACKAGE_CONNMAN_BLUETOOTH=y
 BR2_PACKAGE_CONNMAN_CLIENT=y
+BR2_PACKAGE_DHCPCD=y
 BR2_PACKAGE_IPERF3=y
 BR2_PACKAGE_IPROUTE2=y
+BR2_PACKAGE_IW=y
+BR2_PACKAGE_NTP=y
+BR2_PACKAGE_NTP_SNTP=y
 BR2_PACKAGE_OPENSSH=y
 BR2_PACKAGE_RTL8723BS_BT=y
 BR2_PACKAGE_RTL8723BS_BT_CUSTOM_GIT=y
@@ -71,20 +86,25 @@ BR2_PACKAGE_WPA_SUPPLICANT_DBUS_INTROSPECTION=y
 BR2_PACKAGE_SUDO=y
 BR2_PACKAGE_KMOD=y
 BR2_PACKAGE_KMOD_TOOLS=y
-BR2_TARGET_ROOTFS_CPIO=y
+BR2_PACKAGE_MENDER=y
+BR2_PACKAGE_PROCPS_NG=y
 BR2_TARGET_ROOTFS_UBIFS=y
 BR2_TARGET_ROOTFS_UBIFS_LEBSIZE=0x1f8000
 BR2_TARGET_ROOTFS_UBIFS_MINIOSIZE=0x4000
-BR2_TARGET_ROOTFS_UBIFS_MAXLEBCNT=2000
+BR2_TARGET_ROOTFS_UBIFS_MAXLEBCNT=4096
 BR2_TARGET_ROOTFS_UBIFS_LZO=y
 BR2_TARGET_ROOTFS_UBI=y
-BR2_TARGET_ROOTFS_UBI_PEBSIZE=0x200000
-BR2_TARGET_ROOTFS_UBI_SUBSIZE=16384
+BR2_TARGET_ROOTFS_UBI_PEBSIZE=0x400000
+BR2_TARGET_ROOTFS_UBI_SUBSIZE=0
+BR2_TARGET_ROOTFS_UBI_USE_CUSTOM_CONFIG=y
+BR2_TARGET_ROOTFS_UBI_CUSTOM_CONFIG_FILE="$(TOPDIR)/board/nextthing/chip/ubi.cfg"
+BR2_TARGET_ROOTFS_UBI_OPTS="-M dist3"
 BR2_TARGET_UBOOT=y
 BR2_TARGET_UBOOT_BOARDNAME="CHIP"
 BR2_TARGET_UBOOT_CUSTOM_GIT=y
 BR2_TARGET_UBOOT_CUSTOM_REPO_URL="https://github.com/NextThingCo/CHIP-u-boot.git"
 BR2_TARGET_UBOOT_CUSTOM_REPO_VERSION="production-mlc"
+BR2_TARGET_UBOOT_PATCH="$(TOPDIR)/board/nextthing/chip/patches/u-boot"
 BR2_TARGET_UBOOT_FORMAT_CUSTOM=y
 BR2_TARGET_UBOOT_FORMAT_CUSTOM_NAME="u-boot-dtb.bin"
 BR2_TARGET_UBOOT_SPL=y
@@ -93,4 +113,5 @@ BR2_TARGET_UBOOT_ENVIMAGE=y
 BR2_TARGET_UBOOT_ENVIMAGE_SOURCE="board/nextthing/chip/uboot-env"
 BR2_TARGET_UBOOT_ENVIMAGE_SIZE="0x400000"
 BR2_PACKAGE_HOST_DTC_OVERLAY=y
-BR2_PACKAGE_HOST_SUNXI_TOOLS=y
+BR2_PACKAGE_HOST_MENDER_ARTIFACT=y
+BR2_PACKAGE_HOST_MTD=y
